# hackaCLIme

./: README.md  hackaclime.cfg  hackaclime.py  pyproject.toml
src/: hackaclime.cfg  hackaclime.py
src/hackaclime/: hackaclime.cfg  hackaclime.py
