[project]
name = "hackaclime"
version = "0.1.5"
description = "CLI utility to read Hack Club's Hackatime time tracking API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "schedule>=1.2.2",
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project.scripts]
hackaclime = "hackaclime.hackaclime:main"


[tool.setuptools.packages.find]
where = ["src"]
